src/test/test-models/good/parser-generator/allowed_var_names.stan
functions {
  real foo1(vector data) {
    return data[1];
  }
  real foo2(real data) {
    return data;
  }
}
