src/test/test-models/bad/err-decl-vector.stan
data {
  vector a[3];
}
model {
}
